add call.damapper program

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ man_MANS = ${MANPAGES}
 
 EXTRA_DIST = ${MANPAGES}
 
-bin_PROGRAMS = lassort lasindex lastobam reformatfasta fasta2fastq lasroleswap bamtolas blasrtobam lascat lasmarkprimary
+bin_PROGRAMS = lassort lasindex lastobam reformatfasta fasta2fastq lasroleswap bamtolas blasrtobam lascat lasmarkprimary call.damapper
 dist_bin_SCRIPTS = swappedLasToBAM.sh
 
 lasindex_SOURCES = lasindex.cpp
@@ -60,3 +60,8 @@ lasmarkprimary_SOURCES = lasmarkprimary.cpp
 lasmarkprimary_LDADD = ${LIBMAUS2LIBS}
 lasmarkprimary_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
 lasmarkprimary_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
+
+call_damapper_SOURCES = call.damapper.cpp
+call_damapper_LDADD = ${LIBMAUS2LIBS}
+call_damapper_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
+call_damapper_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
