--- a/configure.ac
+++ b/configure.ac
@@ -164,6 +164,12 @@ if test "${have_libmaus2}" = "no" ; then
 	AC_MSG_ERROR([Required libmaus2 is not available.])
 fi
 
+AC_CHECK_LIB([slurm],[slurm_api_version],[SLURMLIB=YES],[SLURMLIB=NO])
+
+if test "${SLURMLIB}" = "YES" ; then
+	SLURM_HPC_daligner=SLURM.HPC.daligner
+fi
+
 AC_MSG_NOTICE([Using flags ${CFLAGS} for C compiler ${CC}])
 AC_MSG_NOTICE([Using flags ${CXXFLAGS} for C++ compiler ${CXX}])
 
@@ -175,5 +181,6 @@ AC_SUBST([PACKAGE_VERSION])
 # libmaus2
 AC_SUBST([LIBMAUS2CPPFLAGS])
 AC_SUBST([LIBMAUS2LIBS])
+AC_SUBST([SLURM_HPC_daligner])
 # 
 AC_OUTPUT(Makefile src/Makefile)
