--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,11 +7,11 @@ MANPAGES =
 man_MANS = ${MANPAGES}
 
 EXTRA_DIST = ${MANPAGES}
-EXTRA_PROGRAMS = SLURM.HPC.daligner
+# EXTRA_PROGRAMS = 
 
 bin_PROGRAMS = lassort lasindex lastobam reformatfasta fasta2fastq lasroleswap bamtolas blasrtobam lascat lasmarkprimary call.damapper lasaligntotracepoints lasfilterquality \
 	laschainsort lasmerge lascomputetandem lasextracttandemrecompute tandemaligner lasdedup lassubsample @SLURM_HPC_daligner@ lassuffixprefix cocommand lasreduce \
-	lasfilterlength paftolas commandpack commandstart commandfollowup commandprime
+	lasfilterlength paftolas commandpack commandstart commandfollowup commandprime SLURM.HPC.daligner
 dist_bin_SCRIPTS = swappedLasToBAM.sh
 
 lasindex_SOURCES = lasindex.cpp
