do not link SLURM.HPC.daligner with libslurm

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -119,7 +119,7 @@ lassubsample_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${A
 lassubsample_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
 
 SLURM_HPC_daligner_SOURCES = SLURM.HPC.daligner.cpp
-SLURM_HPC_daligner_LDADD = ${LIBMAUS2LIBS} -lslurm
+SLURM_HPC_daligner_LDADD = ${LIBMAUS2LIBS}
 SLURM_HPC_daligner_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
 SLURM_HPC_daligner_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
 
