add programs in config

--- a/src/derive.rc
+++ b/src/derive.rc
@@ -1,3 +1,7 @@
 # comment
 daligner	thread	optional	T	1	0	4
 daligner	mem	mandatory	M	1000	1000
+naligner	thread	optional	T	1	0	4
+naligner	mem	mandatory	M	1000	1000
+datander	thread	optional	T	1	0	4
+datander	mem	mandatory	M	1000	1000
