--- a/src/derive.rc
+++ b/src/derive.rc
@@ -4,4 +4,4 @@ daligner	mem	mandatory	M	1000	1000
 naligner	thread	optional	T	1	0	4
 naligner	mem	mandatory	M	1000	1000
 datander	thread	optional	T	1	0	4
-datander	mem	mandatory	M	1000	1000
+datander	mem	optional	M	1000	1000	1
