--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,8 @@ EXTRA_DIST = ${MANPAGES} derive.rc
 
 bin_PROGRAMS = lassort lasindex lastobam reformatfasta fasta2fastq lasroleswap bamtolas blasrtobam lascat lasmarkprimary call.damapper lasaligntotracepoints lasfilterquality \
 	laschainsort lasmerge lascomputetandem lasextracttandemrecompute tandemaligner lasdedup lassubsample lassuffixprefix cocommand lasreduce \
-	lasfilterlength paftolas commandpack commandstart commandfollowup commandprime SLURM.HPC.daligner commandderive laschecksymmetry extractreads viewmasks
+	lasfilterlength paftolas commandpack commandstart commandfollowup commandprime SLURM.HPC.daligner commandderive laschecksymmetry extractreads viewmasks \
+	lassimplededup
 dist_bin_SCRIPTS = swappedLasToBAM.sh
 
 lasindex_SOURCES = lasindex.cpp
@@ -112,6 +113,11 @@ lasdedup_SOURCES = lasdedup.cpp
 lasdedup_LDADD = ${LIBMAUS2LIBS}
 lasdedup_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
 lasdedup_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
+
+lassimplededup_SOURCES = lassimplededup.cpp
+lassimplededup_LDADD = ${LIBMAUS2LIBS}
+lassimplededup_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
+lassimplededup_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
 
 lassubsample_SOURCES = lassubsample.cpp
 lassubsample_LDADD = ${LIBMAUS2LIBS}
